# cogito

./: COPYRIGHT  Cargo.toml  README.md
cogito/: Cargo.toml
cogito-claude/: Cargo.toml  README.md
cogito-claude/src/: client.rs  lib.rs  service.rs
cogito-claude/tests/: claude_client_https.rs  claude_service_https.rs
cogito-claude/tests/data/: responses.json  responses_multi.json
cogito-openai/: Cargo.toml  README.md
cogito-openai/src/: client.rs  lib.rs
cogito-openai/tests/: openai_client_https.rs  openai_service_https.rs
cogito/src/: client.rs  lib.rs  service.rs
scripts/: claude  openai
