[workspace]
resolver = "3"
members = ["cogito", "cogito-claude", "cogito-openai"]

[workspace.package]
authors = ["Michael Dippery <michael@monkey-robot.com>"]
readme = "README.md"
repository = "https://github.com/mdippery/cogito"
# homepage
license = "Apache-2.0"
keywords = ["ai", "library", "machine-learning"]
categories = ["api-bindings", "development-tools"]
edition = "2024"
rust-version = "1.85.1"

[workspace.dependencies]
cogito = { version = "0.2.1", path = "cogito" }
hypertyper = { version = "0.3.1", git = "https://github.com/mdippery/hypertyper.git" }
indoc = "2.0.7"
itertools = "0.14.0"
log = "0.4.29"
pretty_assertions = "1.4.1"
reqwest = "0.13.3"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros"] }
