[package]
name = "cogito-openai"
version = "0.1.0"
authors.workspace = true
# description
# readme?
readme.workspace = true
# documentation
# repository
# homepage
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cogito = { version = "0.1.0", path = "../cogito" }
hypertyper.workspace = true
itertools = "0.14.0"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
indoc = "2.0.6"
pretty_assertions = "1.4.1"
tokio = { version = "1.48.0", features = ["macros"] }
