[package]
name = "cogito-openai"
version = "0.1.0"
authors.workspace = true
# description
# readme?
readme.workspace = true
# documentation
# repository
# homepage
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cogito.workspace = true
hypertyper.workspace = true
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
tokio.workspace = true
