[package]
name = "cogito-openai"
version = "0.3.0"
authors.workspace = true
description = "OpenAI client implementation for Cogito"
readme = "README.md"
documentation = "https://docs.rs/cogito-openai"
repository.workspace = true
# homepage
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
cogito.workspace = true
hypertyper.workspace = true
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
tokio.workspace = true
