[package]
name = "cogito"
version = "0.1.0"
authors.workspace = true
# description
readme.workspace = true
# documentation
# repository
# homepage
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hypertyper.workspace = true
reqwest = "0.12.24"
serde = "1.0.228"
