[package]
name = "cogito"
version = "0.2.0"
authors.workspace = true
description = "Relentlessly generate AI slop using LLMs"
readme.workspace = true
documentation = "https://docs.rs/cogito"
repository.workspace = true
# homepage
license.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hypertyper.workspace = true
reqwest.workspace = true
serde.workspace = true
